Remove obsolete asset file
